# lab-final

./: .gitignore  Jenkinsfile  one.txt  pyproject.toml  requirements.txt
.dvc/: config.template
artifacts/: data_base.csv  metrics_base.json  model_base.pkl
data/: .gitignore  data.csv.dvc  data_v2.csv.dvc
src/: main.py  train.py
